Add placeholders for translations, update MessagesTest